--- a/app/mvc/board/board.html
+++ b/app/mvc/board/board.html
@@ -1,6 +1,8 @@
 <div class="scrollZone">
 	<svg class="spacer nodes" style="position:absolute; top:0px; left:0px" version="1.1" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink" unselectable="on" style="-webkit-user-select: none;">
 	Sorry, your browser does not support inline SVG.
+		<path d="M2490 2500 L 2510 2500" stroke="lightgrey" stroke-width="1"></path>
+		<path d="M2500 2490 L 2500 2510" stroke="lightgrey" stroke-width="1"></path>
 		<g class="translator">
 			<g class="scaler relation-board">
 			</g>
