--- a/app/mvc/node/node.html
+++ b/app/mvc/node/node.html
@@ -1,10 +1,12 @@
-<rect class="selector fullwidth partialheight" x="0" y="0" width="106" height="48" style="">
+<rect class="outline selector fullwidth partialheight" x="0" y="0" width="106" height="48" style="">
+</rect>
+<rect class="outline border fullwidth partialheight" x="0" y="0" width="106" height="48" style="">
 </rect>
 <foreignObject class="fullwidth partialheight" y="0" width="106" height="48" style="font-size: 42px;"
  requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
 <textarea class="mover textarea" focusable="true" xmlns="http://www.w3.org/1999/xhtml"></textarea>
 </foreignObject>
-<rect class="altmod header barwidth barheight bartop" x="0" y="48" width="8" height="8" style="fill:rgb(0,0,0);" title="Set Document Header">
+<rect class="altmod header barwidth barheight bartop" x="0" y="48" width="16" height="16" style="fill:rgb(0,0,0);" title="Set Document Header">
 </rect>
-<rect class="altmod resize barwidth barheight resizeleft bartop" x="106" y="48" width="8" height="8" style="fill:rgb(0,0,0);" title="Resize">
+<rect class="altmod resize barwidth barheight resizeleft bartop" x="106" y="48" width="16" height="16" style="fill:rgb(0,0,0);" title="Resize">
 </rect>
