--- a/app/mvc/node/node.html
+++ b/app/mvc/node/node.html
@@ -1,10 +1,14 @@
-<rect class="outline selector fullwidth partialheight" x="0" y="0" width="106" height="48" style="">
+<rect class="outline-square selector fullwidth partialheight" x="0" y="0" width="106" height="48" style="">
 </rect>
-<rect class="outline border fullwidth partialheight" x="0" y="0" width="106" height="48" style="">
+<rect class="outline-square border fullwidth partialheight" x="0" y="0" width="106" height="48" style="">
 </rect>
+<ellipse class="outline-circle selector centerpoint radius" cx="0" cy="0" rx="100" ry="100">
+</ellipse>
+<ellipse class="outline-circle border centerpoint radius" cx="0" cy="0" rx="100" ry="100">
+</ellipse>
 <foreignObject class="fullwidth partialheight" y="0" width="106" height="48" style="font-size: 42px;"
  requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
-<textarea class="mover textarea" focusable="true" xmlns="http://www.w3.org/1999/xhtml"></textarea>
+<textarea spellcheck="false" class="mover textarea" focusable="true" xmlns="http://www.w3.org/1999/xhtml"></textarea>
 </foreignObject>
 <rect class="altmod header barwidth barheight bartop" x="0" y="48" width="16" height="16" style="fill:rgb(0,0,0);" title="Set Document Header">
 </rect>
