--- a/app/mvc/sidebar/sidebar.html
+++ b/app/mvc/sidebar/sidebar.html
@@ -2,33 +2,31 @@
 	<div class="sidebar-icon close fa fa-1x fa-chevron-right"></div>
 </div>
 <div class="sidebar-list">
-	<div class="sidebar-item fa fa-1x fa-rotate-right">
+	<div class="sidebar-item fa fa-1x fa-rotate-right" data-action="rotateRight">
 	</div>
-	<div class="sidebar-item fa fa-1x fa-plus">
+	<div class="sidebar-item fa fa-1x fa-plus" data-action="fontIncrease">
 	</div>
-	<div class="sidebar-item fa fa-1x fa-minus">
+	<div class="sidebar-item fa fa-1x fa-minus" data-action="fontDecrease">
 	</div>
-	<div class="sidebar-item fa fa-1x fa-bold">
+	<div class="sidebar-item fa fa-1x fa-bold" data-action="fontBold">
 	</div>
-	<div class="sidebar-item fa fa-1x fa-italic">
+	<div class="sidebar-item fa fa-1x fa-italic" data-action="fontItalic">
 	</div>
-	<div class="sidebar-item fa fa-1x fa-strikethrough">
+	<div class="sidebar-item fa fa-1x fa-strikethrough" data-action="fontStrikeThrough">
 	</div>
-	<div class="sidebar-item fa fa-1x fa-underline">
+	<div class="sidebar-item fa fa-1x fa-underline" data-action="fontUnderline">
 	</div>
-	<div class="sidebar-item fa fa-1x fa-align-left">
+	<div class="sidebar-item fa fa-1x fa-align-left" data-action="fontAlignLeft">
 	</div>
-	<div class="sidebar-item fa fa-1x fa-align-center">
+	<div class="sidebar-item fa fa-1x fa-align-center" data-action="fontAlignCenter">
 	</div>
-	<div class="sidebar-item fa fa-1x fa-align-right">
+	<div class="sidebar-item fa fa-1x fa-align-right" data-action="fontAlignRight">
 	</div>
-	<div class="sidebar-item fa fa-1x fa-circle-thin">
+	<div class="sidebar-item fa fa-1x fa-circle-thin" data-action="borderCircle">
 	</div>
-	<div class="sidebar-item fa fa-1x fa-square-o">
+	<div class="sidebar-item fa fa-1x fa-square-o" data-action="borderSquare">
 	</div>
-	<div class="sidebar-item fa fa-1x fa-adjust">
-	</div>
-	<div class="sidebar-item fa fa-1x fa-arrows-h">
+	<div class="sidebar-item fa fa-1x fa-adjust" data-action="colourChange">
 	</div>
 </div>
 
