Fix for text focus issue

--- a/app/mvc/node/node.html
+++ b/app/mvc/node/node.html
@@ -10,7 +10,7 @@
  requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
 <textarea spellcheck="false" class="mover textarea" focusable="true" xmlns="http://www.w3.org/1999/xhtml"></textarea>
 </foreignObject>
-<rect class="altmod header barwidth barheight bartop" focusable="true" x="0" y="48" width="16" height="16" style="fill:rgb(0,0,0);" title="Set Document Header">
+<rect class="altmod header barwidth barheight bartop" x="0" y="48" width="16" height="16" style="fill:rgb(0,0,0);" title="Set Document Header">
 </rect>
-<rect class="altmod resize barwidth barheight resizeleft bartop" focusable="true" x="106" y="48" width="16" height="16" style="fill:rgb(0,0,0);" title="Resize">
+<rect class="altmod resize barwidth barheight resizeleft bartop" x="106" y="48" width="16" height="16" style="fill:rgb(0,0,0);" title="Resize">
 </rect>
