Added instruction and fix for no start drag position

--- a/app/mvc/board/board.html
+++ b/app/mvc/board/board.html
@@ -1,3 +1,7 @@
+<div style="position: fixed; top:0px; left:0px;font-size:10px; padding:10px;">
+Alt/Option = Modifier Key<br>
+Ctrl = Selector Key<br>
+</div>
 <div class="scrollZone">
 	<svg class="spacer nodes" style="position:absolute; top:0px; left:0px" version="1.1" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink" unselectable="on" style="-webkit-user-select: none;">
 	Sorry, your browser does not support inline SVG.
